# parallel_summation

./: CMakeLists.txt  README.md  main  main.cpp  plot_results.py  results.csv  sum_experiment
.github/workflows/: cmake-multi-platform.yml
